--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,10 @@ environment:
   sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
-  bson: ^5.0.0
+  bson:
+    git:
+      url: https://github.com/okandemirofficial/bson.git
+      ref: fix/object_id_generation_duplicate_id
   crypto: ^3.0.0
   fixnum: ^1.1.0
   logging: ^1.0.0
