--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ dependencies:
 dev_dependencies:
   test: ^1.16.4
   lints: ^6.0.0
+
+dependency_overrides:
+  bson:
+    git:
+      url: https://github.com/okandemirofficial/bson.git
+      ref: fix/object_id_generation_duplicate_id
  
 
 false_secrets:
