--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,10 @@ dependencies:
   crypto: ^3.0.0
   fixnum: ^1.1.0
   logging: ^1.0.0
-  mongo_dart_query: ^5.0.1
+  mongo_dart_query:
+    git:
+      url: https://github.com/okandemirofficial/mongo_dart_query.git
+      ref: personal
   collection: ^1.15.0
   path: ^1.8.0
   pool: ^1.5.0
